# DOD

./: README.md  pyproject.toml
dod/: Analyze_data.ipynb  dota_heroes.html  dota_heroes_com.html  heroes_attributes  web_scrapping.ipynb
dod/.ipynb_checkpoints/: Analyze_data-checkpoint.ipynb  web_scrapping-checkpoint.ipynb
